started formatting nav bar

--- a/index.css
+++ b/index.css
@@ -15,3 +15,23 @@ main {
   align-items: center;
   justify-content: space-around;
 }
+
+footer {
+  flex: 0 30px;
+}
+
+menu {
+  flex: 1;
+  display: flex;
+  flex-direction: row !important;
+  list-style: none;
+}
+
+.navbar-brand {
+  padding-left: 0.3em;
+  border-bottom: solid rgb(182, 182, 182) thin;
+}
+
+menu .nav-item {
+  padding: 0 0.3em;
+}
