--- a/index.css
+++ b/index.css
@@ -27,6 +27,15 @@ menu {
   list-style: none;
 }
 
+.navbar-brand {
+  padding-left: 0.3em;
+  border-bottom: solid rgb(182, 182, 182) thin;
+}
+
+menu .nav-item {
+  padding: 0 0.3em;
+}
+
 footer a {
   float: right;
 }
