--- a/index.css
+++ b/index.css
@@ -25,11 +25,12 @@ menu {
   display: flex;
   flex-direction: row !important;
   list-style: none;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .navbar-brand {
   padding-left: 0.3em;
-  border-bottom: solid rgb(182, 182, 182) thin;
 }
 
 menu .nav-item {
