--- a/index.css
+++ b/index.css
@@ -5,15 +5,16 @@ body {
 }
 
 header {
-  flex: 0 80px;
+  flex: 0 120px;
 }
 
 main {
-  flex: 1 calc(100vh - 110px);
+  flex: 1 calc(100vh - 180px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  background-color: rgb(33, 26, 80);
 }
 
 footer {
