--- a/calander.css
+++ b/calander.css
@@ -17,6 +17,30 @@ main {
   background-color: rgb(33, 26, 80);
 }
 
+.accept {
+    border-radius: 8px;
+}
+
+.accept:hover {
+    background-color: lightgreen;
+}
+
+.reject {
+    border-radius: 8px;
+}
+
+.reject:hover {
+    background-color: darksalmon;
+}
+
+.dismiss {
+    border-radius: 8px;
+}
+
+.dismiss:hover {
+    background-color: khaki;
+}
+
 footer {
   flex: 0 30px;
 }
