replaced about image and finished formatting about

--- a/about.css
+++ b/about.css
@@ -9,12 +9,17 @@ header {
 }
 
 main {
+  padding: 1em;
   flex: 1 calc(100vh - 180px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   background-color: rgb(33, 26, 80);
+}
+
+.credit {
+    font-size: 10px;
 }
 
 footer {
