--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   min-width: 375px;
+  background-color: rgb(33, 26, 80);
 }
 
 header {
@@ -40,6 +41,7 @@ menu .nav-item {
 
 footer a {
   float: right;
+  background-color: rgb(33, 26, 80);
 }
 
 @media (max-height: 600px) {
