--- a/src/calander/calander.css
+++ b/src/calander/calander.css
@@ -139,3 +139,14 @@ footer a {
   margin: 0 0.25em;
 }
 
+.sent {
+  color: rgb(1, 130, 166);
+}
+
+.received {
+  color: rgb(165, 220, 235);
+}
+
+.system {
+  color: rgb(66, 87, 93);
+}
